--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,25 +1,27 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
 @import url('./reset.css');
 
-@import url('./header.css');
-
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+body {
+  font-family: 'Montserrat', sans-serif;
   font-size: 16px;
-  line-height: 24px;
+  line-height: 1.5;
   font-weight: 400;
+  letter-spacing: 0.04em;
 
-  color: #242424;
+  color: #2e2f42;
   background-color: rgba(255, 255, 255, 0.87);
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+  padding: 38px;
+}
+
+input {
+  width: 272px;
+  height: 40px;
+
+  border-radius: 4px;
+  border: 1px solid #808080;
+  padding: 0 16px;
+}
+
+input::placeholder {
+  color: #808080;
 }
