--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -114,13 +114,18 @@ input:hover {
 }
 
 .loader {
+  margin-top: 60px;
+  margin-left: auto;
+  margin-right: auto;
   width: 48px;
   height: 48px;
   border: 5px solid #808080;
   border-bottom-color: transparent;
   border-radius: 50%;
-  display: inline-block;
-  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   animation: rotation 1s linear infinite;
 }
 
